# bico_esp-idf_container

./: .gitignore  .gitmodules  Dockerfile  README.md  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/workflows/: docker-image.yml
main/: main.cpp
script/cmake_for_any_lib/: CMakeLists.txt
script/target_setup/: select_and_setting_target.py
script/target_setup/esp32/: esp32.bat  esp32.sh  sdkconfig.defaults
script/target_setup/esp32c3/: CMakeLists.txt  esp32c3.bat  esp32c3.sh
